<resources>
    <string name="app_name">Agri India</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="loading">Loading...</string>
    <string name="key_id">rzp_test_4KlOjIggoWzTlr</string>
    <string name="change_language">Change Language</string>
    <string name="menu_ecommerce">E-Commerce</string>
    <string name="menu_apmc_updates">APMC Updates</string>
    <string name="menu_create_post">Create Post</string>
    <string name="menu_community_network">Community Network</string>
    <string name="menu_weather_forecast">Weather Forecast</string>
    <string name="menu_my_order">My Orders</string>
    <string name="menu_change_language">Change Language</string>
    <string name="menu_logout">Log Out</string>

    <string name="dash_articles">Articles</string>
    <string name="dash_products">Products</string>
    <string name="cart_buy_all">Buy All</string>

    <string name="order_payment">Order Payment</string>


    <string name="full_name">Full Name</string>
    <string name="address">Locality / Street Name</string>

    <string name="city">City</string>
    <string name="state">State</string>
    <string name="pincode">Pincode</string>
    <string name="mobile_number">Mobile Number</string>

    <string name="address_type">Address Type</string>
    <string name="payment_proceed">Proceed with Payment</string>

    <string name="buy_now">Buy Now</string>

    <string name="bottom_nav_home">Home</string>
    <string name="bottom_nav_posts">Posts</string>
    <string name="bottom_nav_apmc">APMC</string>
    <string name="bottom_nav_ecommerce">E-Commerce</string>





</resources>